# MemLearn

./: .gitignore  README.md  pyproject.toml
evals/: .gitignore  README.md  judge.py  main.py  pyproject.toml
evals/locomo/: README.md  run.py
memlearn/: BRAINSTORM.md  README.md  __init__.py  config.py  memfs.py  prompts.py  pyproject.toml  types.py
memlearn/databases/: __init__.py  base.py  sqlite_db.py
memlearn/embedders/: __init__.py  base.py  conversation_chunker.py  openai_embedder.py
memlearn/llms/: __init__.py  base.py  openai_llm.py
memlearn/rerankers/: __init__.py  base.py  cohere_reranker.py
memlearn/sandboxes/: __init__.py  base.py  local_sandbox.py
memlearn/tools/: __init__.py  base.py  langchain_tools.py  openai_tools.py
memlearn/vector_stores/: __init__.py  base.py  chroma_vdb.py
playground/: .env.example  .gitignore  main.py  pyproject.toml  simplefs.py
playground/existing/: agentfs-demo.py  letta-demo.py  mem0-demo.py  zep-demo.py
