[project]
name = "memlearn"
version = "0.0.1"
description = "An open-source agentic memory and continual learning system"
readme = "README.md"
requires-python = ">=3.13"
keywords = ["llm", "agents", "memory", "rag", "embeddings", "ai"]
dependencies = [
    "chromadb>=1.4.1",
    "cohere>=5.20.2",
    "langchain>=1.2.7",
    "openai>=2.15.0",
    "pydantic>=2.12.5",
    "pygithub>=2.8.1",
]
