[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.3.23",
    "exa-py>=2.1.1",
    "letta-client>=1.7.6",
    "mem0-mcp-server>=0.2.1",
    "mem0ai>=1.0.2",
    "memlearn>=0.0.1",
    "openai-agents>=0.7.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
memlearn = { workspace = true }
