[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agentfs-sdk>=0.6.0rc2",
    "chromadb>=0.3.23",
    "exa-py>=2.1.1",
    "langchain>=1.2.7",
    "langchain-anthropic>=1.3.1",
    "langchain-google-genai>=4.2.0",
    "langchain-openai>=1.1.7",
    "letta-client>=1.7.6",
    "mem0-mcp-server>=0.2.1",
    "mem0ai>=1.0.2",
    "memlearn>=0.0.1",
    "openai-agents>=0.7.0",
    "prompt-toolkit>=3.0.52",
    "python-dotenv>=1.2.1",
    "zep-cloud>=3.16.0",
]

[tool.uv.sources]
memlearn = { workspace = true }

[tool.uv]
prerelease = "allow"
